; ModuleID = '/home/carl/AnghaBench/mpv/sub/extr_osd_libass.c_ass_draw_line_to.c'
source_filename = "/home/carl/AnghaBench/mpv/sub/extr_osd_libass.c_ass_draw_line_to.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ass_draw = type { i32 }

@.str = private unnamed_addr constant [3 x i8] c" l\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ass_draw*, float, float)* @ass_draw_line_to to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ass_draw_line_to(%struct.ass_draw* %0, float %1, float %2) #0 {
  %4 = alloca %struct.ass_draw*, align 8
  %5 = alloca float, align 4
  %6 = alloca float, align 4
  store %struct.ass_draw* %0, %struct.ass_draw** %4, align 8
  store float %1, float* %5, align 4
  store float %2, float* %6, align 4
  %7 = load %struct.ass_draw*, %struct.ass_draw** %4, align 8
  %8 = call i32 @ass_draw_append(%struct.ass_draw* %7, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  %9 = load %struct.ass_draw*, %struct.ass_draw** %4, align 8
  %10 = load float, float* %5, align 4
  %11 = load float, float* %6, align 4
  %12 = call i32 @ass_draw_c(%struct.ass_draw* %9, float %10, float %11)
  ret void
}

declare dso_local i32 @ass_draw_append(%struct.ass_draw*, i8*) #1

declare dso_local i32 @ass_draw_c(%struct.ass_draw*, float, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
